k8s/blogs-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: blogs-backend-service
    namespace: blogs
spec:
    internalTrafficPolicy: Cluster
    ipFamilies:
        - IPv4
    ipFamilyPolicy: SingleStack
    ports:
        - name: tcp
          port: 8080
          protocol: TCP
          targetPort: 8080
    selector:
        app: blogs-backend
    sessionAffinity: None
    type: ClusterIP
